WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284652
[WebGPU] Dynamic offsets index generation is incorrect for more than two bind groups using dynamic offsets
https://bugs.webkit.org/show_bug.cgi?id=284652
Summary
[WebGPU] Dynamic offsets index generation is incorrect for more than two bind...
Mike Wyrzykowski
Reported
2024-12-13 13:37:24 PST
[WebGPU] Pipeline creation allows for overlapping binding indices
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-12-13 13:37:40 PST
rdar://141433334
Mike Wyrzykowski
Comment 2
2024-12-13 14:00:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37935
EWS
Comment 3
2024-12-15 22:44:32 PST
Committed
287866@main
(0b1e7a02543a): <
https://commits.webkit.org/287866@main
> Reviewed commits have been landed. Closing PR #37935 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug