[WebGPU] Dynamic offsets index generation is incorrect for more than two bind groups using dynamic offsets https://bugs.webkit.org/show_bug.cgi?id=284652 rdar://141433334

Reviewed by Dan Glastonbury.

When computing the index for dynamic offsets, we didn't take
into account the total index offset in the call to std::max(...)

* LayoutTests/fast/webgpu/regression/repro_284652-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_284652.html: Added.

* Source/WebGPU/WebGPU/ShaderModule.mm:

Canonical link: https://commits.webkit.org/287866@main